# pza-emu-tenma-72-2710

./: .gitignore  README.md
.github/workflows/: build-pza-emu-tenma-72-2710.yml
pico-firmware/src/: CMakeLists.txt  serial.c
tenma-control/: tenma.robot  tenmaDcLib.py  tenma_72_2710.py
